# Orion-Research-Agent

./: .gitignore  README.md  main.py  pyproject.toml
src/deep_research/: __init__.py  cli.py  config.py  engine.py  logs.py  models.py
src/deep_research/agents/: __init__.py  deep_extractor.py  memory_manager.py  orchestrator.py  report_synthesizer.py  research_analyst.py  search_specialist.py
src/deep_research/memory/: __init__.py  chroma_memory.py  session.py
src/deep_research/report/: __init__.py  citation.py  generator.py
src/deep_research/report/templates/: markdown.md.j2  structured.json.j2
src/deep_research/tools/: __init__.py  arxiv_search.py  citations.py  crawl_links.py  memory_tools.py  pdf_extractor.py  verify_source.py  web_scraper.py  web_search.py
